# Cookout

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: lib.rs  types.rs
scraper/: Cargo.toml
scraper/src/: main.rs  parse_main.rs  parse_recipe.rs  utils.rs
server/: Cargo.toml
server/src/: graphql_endpoints.rs  main.rs  merge_ingredients_endpoints.rs  query.rs  schema.rs
