[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.12.0"
lazy_static = "1.4.0"
serde_json = "1.0"
log = "0.4.16"
common = { path = "../common" }