[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.9"
log = "0.4.16"
common = { path = "../common" }
juniper_warp = "0.7.0"
warp = "0.3.2"
tokio = {version = "1.17.0", features = ["full"]}
env_logger = "0.9"
serde_json = "1.0"
